[FIX] portal: prevent name overflow in portal view
Steps:
- Open Settings > Users
- Change the name of the user by typing it multiple times
- Go to the portal view of the website

Case 1:
- The name in the details on the right-hand side of the view is overflown
Case 2:
- Among the Documents select Task > select a task where our user is set as an
Assignee
- When clicked, in the left column, the name of the assignee is found to be
overflowing.
Case 3:
- Among the Documents select Tickets > select a ticket which is assigned to our
user.
- When clicked, the name under assigned to is found to be overflowing.

Issue:
- The name at various places in the portal view is found to be overflowing.

Cause:
- The text is not truncated due to which the name overflows.

Fix:
- adding a class 'text-truncate' along with some CSS styles.

Task: 3383519

--- a/addons/portal/static/src/scss/portal.scss
+++ b/addons/portal/static/src/scss/portal.scss
@@ -351,6 +351,9 @@ img, .media_iframe_video, .o_image {
 
     address {
         span[itemprop="name"] {
+            @include text-truncate;
+            display: block;
+            max-width: 14rem;
             margin-bottom: 0.3em;
         }
 
@@ -373,6 +376,10 @@ img, .media_iframe_video, .o_image {
                 }
             }
         }
+    }
+
+    .o_portal_my_details span[itemprop="name"] {
+        max-width: 16rem;
     }
 
     .o_my_sidebar div[itemprop="address"] > div {
